left align and url fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -340,7 +340,7 @@ pre {
 }
 .postContent {
   padding-top: 3.5em;
-  text-align: center;
+  text-align: left;
 }
 .postDate {
   float: left;
@@ -356,7 +356,7 @@ pre {
 }
 .postTitle {
   font-weight: 400;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-indent: 3px;
